<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DataFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="16dp"
        android:gravity="bottom"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <View
            android:id="@+id/viewPAC"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/teal_700"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"/>

        <View
            android:id="@+id/viewDRI"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/teal_700"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"/>

        <View
            android:id="@+id/viewSHO"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/teal_700"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"/>

        <View
            android:id="@+id/viewDEF"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/teal_700"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"/>

        <View
            android:id="@+id/viewPAS"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/teal_700"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"/>

        <View
            android:id="@+id/viewPHY"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/teal_700"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:gravity="bottom"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/pac"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/dri"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/sho"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/def"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/pas"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/phy"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>